Replace constructors with valueOf()